--- a/httpd.conf
+++ b/httpd.conf
@@ -170,7 +170,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/usr/local/apache2/htdocs"
+DocumentRoot "/htdocs"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -197,7 +197,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/usr/local/apache2/htdocs">
+<Directory "/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
