modify index filename

--- a/httpd.conf
+++ b/httpd.conf
@@ -232,7 +232,7 @@ DocumentRoot "/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.shtml
 </IfModule>
 
 #
