--- a/httpd.conf
+++ b/httpd.conf
@@ -210,7 +210,7 @@ DocumentRoot "/htdocs"
     # http://httpd.apache.org/docs/2.2/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options Indexes FollowSymLinks Includes
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
