--- a/httpd.conf
+++ b/httpd.conf
@@ -2,6 +2,7 @@ ServerRoot "/usr/local/apache2"
 
 Listen 80
 
+LoadModule dir_module modules/mod_dir.so
 LoadModule include_module modules/mod_include.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule mime_module modules/mod_mime.so
@@ -14,6 +15,10 @@ DocumentRoot "/htdocs"
 <Directory "/htdocs">
     Options Includes
 </Directory>
+
+<IfModule dir_module>
+    DirectoryIndex index.shtml
+</IfModule>
 
 ErrorLog /proc/self/fd/2
 LogLevel warn
