enale exec directive

--- a/httpd.conf
+++ b/httpd.conf
@@ -3,6 +3,7 @@ ServerRoot "/usr/local/apache2"
 Listen 80
 
 LoadModule dir_module modules/mod_dir.so
+LoadModule cgi_module modules/mod_cgi.so
 LoadModule include_module modules/mod_include.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule mime_module modules/mod_mime.so
